deployment/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fuse-api
  labels:
    app: fuse-api
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 9090
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app: fuse-api
